Zmiana haseł i poprawki w playbookach (#1020)
Zmienia hasła do serwisów zewnętrznych.

Przy okazji poprawiamy generowanie pliku .env w playbookach. Błąd w formatowaniu w tym pliku skutkował awarią w aplikacji przydziały.

--- a/infra/playbooks/templates/env.j2
+++ b/infra/playbooks/templates/env.j2
@@ -29,7 +29,7 @@ CLASS_ASSIGNMENT_SPREADSHEET_ID={{ class_assignment_spreadsheet_id }}
 GDRIVE_SERVICE_TYPE={{ gdrive_service_type }}
 GDRIVE_PROJECT_ID={{ gdrive_project_id }}
 GDRIVE_PRIVATE_KEY_ID={{ gdrive_private_key_id }}
-GDRIVE_PRIVATE_KEY={{ gdrive_private_key }}
+GDRIVE_PRIVATE_KEY={{ gdrive_private_key | replace('\n','\\n') }}
 GDRIVE_CLIENT_EMAIL={{ gdrive_client_email }}
 GDRIVE_CLIENT_ID={{ gdrive_client_id }}
 GDRIVE_AUTH_URI=https://accounts.google.com/o/oauth2/auth
