--- a/zapisy/apps/users/templates/users/my_profile.html
+++ b/zapisy/apps/users/templates/users/my_profile.html
@@ -95,6 +95,9 @@
                 <th>Aktualny semestr</th>
                 <td>{{ semester }}</td>
             </tr>
+            {% if effects %}
+                {% include "effects.html" with effects=effects only %}
+            {% endif %}
         </table>
     </div>
     {% endif %}
